# MMshell

./: README.md  SSH终端开发计划-当前成功架构版.md  mmshell_config.json
.drag-cache/: m1-1776247201663-file-log、.txt.txt
mmshell-app/: README.md  fix-progress.ps1  package-lock.json  package.json  temp-snippet.txt
mmshell-app/docs/: M1-MVP-演示脚本.md  M1-回归测试报告.md  M1-用户说明-v1.md  M1-端到端演示问题清单.md  M2-全量回归报告.md  M2-指标埋点说明.md  M2-更新说明草稿.md  M2-稳定性跑测说明.md  M2-里程碑评审.md  SFTP-原生拖拽下载开发计划.md
mmshell-app/scripts/: stability-run.ps1
mmshell-app/src/: App.css  App.tsx
mmshell-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
mmshell-app/src-tauri/capabilities/: default.json
mmshell-app/src-tauri/native/: drag_io.cpp  virtual_drag.cpp
mmshell-app/src-tauri/native-drag-probe/: Cargo.toml
mmshell-app/src-tauri/native-drag-probe/src/: main.rs
mmshell-app/src-tauri/src/: lib.rs  main.rs
native-drag-probe/: CMakeLists.txt  main.cpp
