[package]
name = "mmshell"
version = "0.1.0"
description = "Windows SSH terminal powered by Tauri + portable-pty"
authors = ["you"]
edition = "2021"

[lib]
name = "mmshell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
] }
windows-core = "0.61.2"
