[package]
name = "native-drag-probe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
] }
windows-core = "0.61.2"
